styling header to get auto height (jQuery css property on change), fixing 33% flex margin issue, adding content alignment for desktop size, scaling the header, styling padding of footer

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,9 @@ body{
 	color: $text-color;
 	display: flex;
 	justify-content:center;
+	@include desktop{
+		justify-content: left;
+	}
   flex-flow: row wrap;
 	height: 100%;
 	font-size: $font-size; /*16px*/;
@@ -30,8 +33,7 @@ header{
 	flex-flow:row wrap;
 	justify-content: center;
   align-content: center;
-  width: 90vw;
-	padding-top: 30px;
+	margin-top: 25vh;
 		@include tablet {
 		flex-wrap: nowrap;
 	}
@@ -39,25 +41,14 @@ header{
 	  padding: 1rem 0;
 	}
 }
-#loading-image{
-background: url('../../assets/images/ajax-loader.gif');
-background-size: contain;
-background-repeat: no-repeat;
-width: 100px;
-height: 100px;
-margin: 20px;
-display:inline-block;
+.loading-image{
+	margin: 0 auto;
+	max-width: 50%;
 }
-//need to add class to make it smaller once the selection is clicked
 .header-smaller{
 	transition: all 1s ease-in 0.2s;
-	transform: scale(.8);
-	// padding: 1rem;
-		@include tablet {
-		flex: 1 0 auto;
-		height: 150px;
-		align-self: flex-start;
-		}
+	transform: scale(.7);
+	& nyt-logo
 }
 
 .select-category{
@@ -67,25 +58,17 @@ display:inline-block;
   flex-wrap: wrap;
   text-align: center;
   padding: 1rem;
-	& p{
-		flex-basis: 100%;
-	}
+		& p{
+			flex-basis: 100%;
+		}
 }
 
 .nyt-logo, .select-category{
   flex-basis: 100%;
 }
-.nyt-logo{
-  margin: 1rem 0;
-  // transition: all 0.3s ease 1s;
-	&:hover{
-		  margin: 0;
-	}
-}
-
-//NYT FEED
 .feed-images{
   width:100%;
+	margin-bottom: 20px;
 }
 //ul
 .story-list{
@@ -93,7 +76,6 @@ display:inline-block;
   flex-flow: row wrap;
   width: 100%;
 }
-//li
 .story-list-item{
 	flex-basis: 100%;
   display: inline-block;
@@ -101,25 +83,23 @@ display:inline-block;
 	transition-property: height;
 	transition-duration: 1s;
 	transition-timing-function: ease;
-	& a {
-		display: block;
-		height: 30rem;
-	}
+		& a {
+			display: block;
+			height: 30rem;
+		}
+		&:hover{
+			height: 20rem;
+		}
 
-	&:hover{
-		height: 20rem;
-	}
+	  @include tablet{
+	    flex: 1 1 calc(33.33% - 20px);//need to get rid of unnecessary margin on the right; src:https://stackoverflow.com/questions/45057867/flex-items-not-respecting-margins-and-box-sizing-border-box
+	  }
 
-  @include tablet{
-    flex-basis: 33%;
-  }
-
-  @include desktop{
-      flex-basis: 25%;
-    }
+	  @include desktop{
+	      flex-basis: 25%;
+	  }
 }
 
-//p with abstrackt
 .story-item-text{
   bottom:0;
   background: $main-color;
@@ -134,7 +114,9 @@ display:inline-block;
 
 //FOOTER
 footer{
-  margin: auto;
-	padding: 1.875rem; /*30px*/
+  margin:auto;
   color: $footer-color;
+	@include desktop{
+		margin-left: 30px;
+	}
 }
